deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mantsolicitudes
  labels:
    app: mantsolicitudes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mantsolicitudes
  template:
    metadata:
      labels:
        app: mantsolicitudes
    spec:
      containers:
        - name: mantsolicitudes
          image: consaluddevops.azurecr.io/mantsolicitudes
          imagePullPolicy: Always
          ports:
            - containerPort: 80          
      imagePullSecrets:
        - name: acr-secret
