service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mantsolicitudes-service
spec:
  selector:
    app: mantsolicitud
  ports:
    - protocol: TCP
      port: 80         # Puerto interno del cluster
      targetPort: 80 # Puerto donde escucha el contenedor
  type: ClusterIP
