Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-gestor-solicitudes-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts: 
      - solicitudes.canales.development.consalud.net
      secretName: solicitudes-canales-tls
  rules:
    - host: solicitudes.canales.development.consalud.net
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-gestor-solicitudes-service
                port:
                  number: 80
